--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </div>
 
   <footer>
-    <div class="credit">제작: 또치쌤</div>
+    <div class="credit">제작: 또치쌤(이성일)</div>
   </footer>
 </body>
 </html>
